# FastAPI-With-Jinja-Templates

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: redis.conf  run.sh
docs/: template.md
src/api/: app.py
src/api/core/: auth.py  cache.py  dependencies.py  exceptions.py  lifespan.py  middleware.py  ratelimit.py  responses.py
src/api/routes/: __init__.py
src/api/routes/v1/: auth.py  pages.py  posts.py  root.py
src/config/: config.py  config.yaml  settings.py
src/db/: __init__.py  models.py
src/db/repositories/: api_repository.py  post_repository.py  user_repository.py
src/schemas/: base.py  types.py
src/schemas/db/: models.py
src/schemas/routes/: health.py
src/templates/: index.html  layout.html  login.html  posts.html  signup.html
src/utilities/: utils.py  validators.py
