[project]
name = "fastapi-with-jinja-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.8",
    "gunicorn>=25.0.3",
    "msgspec>=0.20.0",
    "omegaconf>=2.3.0",
    "passlib>=1.7.4",
    "pendulum>=3.2.0",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


# Pyrefly header
[tool.pyrefly]

#### configuring what to type check and where to import from
project-includes = ["src", "."]
project-excludes = ["**/.[!/.]*"]
search-path = ["."]
